# nw_msai_437_event_recommendation

./: .env.example  README.md  chicago_ticketmaster_events.csv  evaluate_bart.py  event_embeddings.npy  events_with_text.csv  illinois_business_mapping.json  make_embeddings.py  pyproject.toml  sanity_check.py  venue_embeddings.npy  venues_with_text.csv  visualize_evaluation.py
backend/: config.py  main.py  state.py
backend/models/: schemas.py
backend/routers/: admin.py  llm.py  new_user.py  pipeline.py
backend/services/: classifier_service.py  data_loader.py  embedding_service.py  llm_service.py  pipeline_service.py  recommendation_service.py  scraper_service.py
data/: chicago_eventbrite_scraped.csv  event_embeddings_v3.npy  events_with_text_v3.csv  venues_with_text_v3.csv
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: EventCard.tsx  EventList.tsx  LabelSelector.tsx  Navbar.tsx  PipelineStatus.tsx  UserDropdown.tsx
frontend/src/pages/: AdminPage.tsx  NewUserPage.tsx
frontend/src/types/: index.ts
notebooks/: eventbrite_pull.ipynb  eventbrite_scrape_and_classify.ipynb  yelp_illinois_collaborative_filtering.ipynb
